--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -93,6 +93,9 @@ window:
   # and `light`. Set this to `None` to use the default theme variant.
   #gtk_theme_variant: None
 
+  # Window opacity - Value is float between 0.0 (full transparency) and 1.0 (opaque)
+  opacity: 0.9
+
 scrolling:
   # Maximum number of lines in the scrollback buffer.
   # Specifying '0' will disable scrolling.
@@ -359,7 +362,9 @@ draw_bold_text_with_bright_colors: true
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.9
+# DEPRECATED:
+#background_opacity: 0.9
+# Use opacitity in class Window
 
 #selection:
   # This string contains all characters that are used as separators for
